#ifndef NON_SQUARE_MATRIX_EXCEPTION_H
#define NON_SQUARE_MATRIX_EXCEPTION_H

#include <stdexcept>

class NonSquareMatrixException : std::exception {
    
};

#endif