#ifndef NON_SIMMETRIC_DEFINITE_POSITIVE_H
#define NON_SIMMETRIC_DEFINITE_POSITIVE_H

#include <stdexcept>

class NonSymmetricAndPositiveDefiniteException : public std::exception {
    
};


#endif