#ifndef NORM_H
#define NORM_H

enum class NormType {
    EUCLIDEAN,
    MANHATTAN,
    INFTY
};

#endif